--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -20,11 +20,11 @@ button,
 input[type="submit"] {
   color: rgb(26, 26, 26);
   border: none;
-  background: rgb(185, 180, 190);
+  background: rgb(210, 200, 205);
   font-family: 'Verdana', monospace;
   font-size: 1em;
   border-radius: 25px;
-  border: 1px solid rgb(110, 110, 110);
+  border: 1px solid rgb(52, 28, 28);
   ;
   padding: 5px;
   text-decoration: none;
@@ -35,25 +35,25 @@ input[type="submit"] {
 a:hover,
 button:hover,
 input[type="submit"]:hover {
-  background: rgb(175, 170, 180);
+  background: rgb(170, 160, 165);
   color: white;
 }
 
 form {
   grid-row-gap: .3em;
   border-radius: 25px;
-  background: rgb(190, 185, 195);
-  ;
+  background-color: rgb(195, 190, 200);
   padding: 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  min-width: 38%;
+  min-width: 50%;
   display: inline-block
 }
 
 input[type="text"] {
   display: inline-block;
   width: 98%;
+  overflow: scroll;
 }
 
 ul {
@@ -106,9 +106,9 @@ hr.rounded {
 }
 
 .alert {
+  border-radius: 25px;
   padding: 15px;
-  background-color: #f4e436; /* Yellow */
-  color: rgb(235, 7, 7);
+  background-color: rgb(185, 139, 139); /* Yellow */
   margin-bottom: 1px;
 }
 
